<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MulherMaravilha">
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="268dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="190dp"
                android:layout_height="258dp"
                android:contentDescription="@string/minibat"
                android:paddingTop="50dp"
                app:srcCompat="@drawable/ww" />

            <TextView
                android:id="@+id/txtrobin2"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="-12dp"
                android:layout_marginBottom="126dp"
                android:ems="11"
                android:fontFamily="@font/alfa_slab_one"
                android:hint="@string/wonder"
                android:paddingStart="180dp"
                android:paddingTop="80dp"
                android:paddingEnd="80dp" />

            <TextView
                android:id="@+id/txtnome2"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:ems="12"
                android:fontFamily="@font/alfa_slab_one"
                android:hint="@string/nome"
                android:paddingStart="200dp"
                android:paddingTop="150dp" />

            <TextView
                android:id="@+id/txtespecie2"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:ems="12"
                android:fontFamily="@font/alfa_slab_one"
                android:hint="@string/especie"
                android:paddingStart="200dp"
                android:paddingTop="210dp" />

            <TextView
                android:id="@+id/txtcodigo2"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:ems="12"
                android:fontFamily="@font/alfa_slab_one"
                android:hint="@string/codigo"
                android:paddingStart="200dp"
                android:paddingTop="240dp" />

            <TextView
                android:id="@+id/txtcodinome2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:fontFamily="@font/alfa_slab_one"
                android:hint="@string/codinome"
                android:paddingStart="200dp"
                android:paddingTop="180dp" />

            <TextView
                android:id="@+id/txtcodww"
                android:layout_width="139dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/imageView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="263dp"
                android:layout_marginTop="239dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="-33dp" />

            <TextView
                android:id="@+id/txtnomeww"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/imageView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="263dp"
                android:layout_marginTop="151dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="55dp" />

            <TextView
                android:id="@+id/txtcodinomeww"
                android:layout_width="119dp"
                android:layout_height="19dp"
                android:layout_alignBottom="@+id/imageView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="283dp"
                android:layout_marginTop="182dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="25dp" />

            <TextView
                android:id="@+id/txtespecieww"
                android:layout_width="139dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/imageView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="265dp"
                android:layout_marginTop="209dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="-3dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txthabilidade2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/habilidades"
            android:paddingStart="20dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/txthabilidadeww"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:paddingStart="20dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/txtvulnerabilidade2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/vulnerabilidades"
            android:paddingStart="20dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/txtvulnww"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:paddingStart="20dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/txthabilidade4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/equipamentos"
            android:paddingStart="20dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/txtequipww"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:paddingStart="20dp"
            android:paddingTop="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>